2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-util.c
	* src/util/hd-util.h: Added hd_util_get_cursor_position
	* src/launcher/hd-launcher.c: Now make app loading transition
	  start from last mouse press location (for desktop shortcuts and
	  any app not launched from the launcher).

2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher.c: Removed debug print

2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* configure.ac: added linking to libhildondesktop (It was already
	  required in debian/control)
	* src/home/hd-home.c: Use libhildondesktop to write application
	  screenshots in PVR format instead of PNG (for faster load times)
	* src/launcher/hd-launcher.c: Switch to loading application screenshots
	  in PVR file format (and clipping them to size if required). Also fix
	  for the application launch animation starting from the location of
	  the previously clicked tile - not the currently clicked one.

2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c
	* src/home/hd-render-manager.h
	* src/home/hd-render-manager.c: Removed un-needed queue_redraw code
	and instead just call clutter directly.		

2009-05-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-grid.h
	* src/launcher/hd-launcher-grid.c: Moved tile vertical spacing const
	  into the header file and made it 32px as per the spec	  

2009-05-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-render-manager.c
	(hd_render_manager_sync_clutter_before): Silence Coverity by replacing
	the switch for visible_top_right with a simpler if clause (without
	non-reachable 'default' branch).

	Release 2.2.48

	* src/util/hd-dbus.c (hd_dbus_init): No need to use g_strdup_printf
	for static strings.

2009-05-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#106183 Desktop shortcut moves place after UI has been rotated
