@@ -67,12 +67,12 @@ duration = 200
 # duration_out = time for rotation after blanking
 # angle = rotation angle for each transition, in degrees. Ideally this is set
 #         so that the screen looks like it keeps turning at the same speed 
-#         during blanking. Something like 180 * duration_in / duration_total
+#         during blanking. Something like 90 * duration_in / duration_total
 [rotate]
 duration_in = 200
-duration_blanking = 500
+duration_blanking = 300
 duration_out = 200
-angle = 40
+angle = 25
 
 # App close transition
 [app_close]
