@@ -36,6 +36,12 @@ hd_transition_overshoot(float x);
 float
 hd_transition_smooth_ramp(float amt);
 
+float
+hd_transition_ease_in(float amt);
+
+float
+hd_transition_ease_out(float amt);
+
 /* For the animated progress indicator in the title bar */
 void
 on_decor_progress_timeline_new_frame(ClutterTimeline *timeline,
